# storymagic

./: .env.example  .gitignore  FULL_SPEC.md  Makefile  TODO.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: pyproject.toml
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/middleware/: audit_log.py  cors.py  rate_limiter.py  request_tracing.py
apps/api/app/models/: __init__.py  abuse_report.py  book.py  child.py  classroom.py  creator.py  draft.py  dream.py  event.py  gift.py  living_book.py  notification.py  order.py  page.py  prompt_version.py  referral.py  subscription.py  template.py  user.py  voice.py
apps/api/app/quality/: __init__.py  consistency_gate.py  likeness_gate.py  pipeline.py  safety_gate.py  technical_quality_gate.py
apps/api/app/rhyme/: __init__.py  hebrew_dictionary.py  rhyme_rag.py  rhyme_validator.py
apps/api/app/routers/: admin.py  auth.py  books.py  children.py  classroom.py  dreams.py  gifts.py  health.py  illustrations.py  marketplace.py  orders.py  payments.py  print.py  recommendations.py  referral.py  stories.py  subscriptions.py  voice.py
apps/api/app/schemas/: __init__.py  auth.py  book.py  child.py  classroom.py  common.py  creator.py  dream.py  gift.py  order.py  page.py  recommendation.py  subscription.py  template.py  user.py  voice.py
apps/api/app/services/: __init__.py  analytics_service.py  book_service.py  child_service.py  classroom_service.py  creator_service.py  gift_service.py  user_service.py  (+8 more)
apps/api/tests/: conftest.py
apps/api/worker/: main.py
(+347 files in other folders)
