[project]
name = "storymagic-api"
version = "0.1.0"
description = "StoryMagic AI-powered children's book platform - API server"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    # Database
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.31.0",
    "alembic>=1.15.0",
    # Cache
    "redis>=5.2.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # HTTP client
    "httpx>=0.28.0",
    # Payments
    "stripe>=12.0.0",
    # Validation
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    # AI orchestration
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.3.0",
    # AI providers
    "anthropic>=0.52.0",
    "google-generativeai>=0.8.0",
    "openai>=1.75.0",
    # Image processing
    "pillow>=11.2.0",
    "numpy>=2.2.0",
    # Temporal
    "temporalio>=1.9.0",
    # Utilities
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.1.0",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
